project(test)

ADD_DEFINITIONS(-Dprotected=public -Dprivate=public -DUNIT_TEST=1)

add_subdirectory(croutine)
add_subdirectory(base)
add_subdirectory(common)
add_subdirectory(message)
add_subdirectory(class_loader)
add_subdirectory(data)
add_subdirectory(time)
add_subdirectory(timer)
add_subdirectory(service_discovery)
add_subdirectory(parameter)
add_subdirectory(transport)
add_subdirectory(other)
add_subdirectory(scheduler)
add_subdirectory(node)
add_subdirectory(logger)
add_subdirectory(tools)
add_subdirectory(record)
add_subdirectory(component)
add_subdirectory(mainboard)
add_subdirectory(dispatcher)
